--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -185,6 +185,10 @@
         <span class="file-title">Cavallo, A.; Sepúlveda, O.; Salazar, M. (1988). <em>La historia oculta del régimen militar: Chile 1973–1988</em>. Santiago: Uqbar Editores.</span>
         <a class="tiny-link" href="https://www.uqbareditores.cl/la-historia-oculta-del-regimen-militar-pvp" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
+<li class="item-row">
+  <span class="file-title">Cristi, R.; Ruiz-Tagle, P. (2006). <em>La república en Chile</em>. Santiago: LOM Ediciones.</span>
+  <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+</li>
       <li class="item-row">
         <span class="file-title">Fontaine, A.; Larroulet, C.; Navarrete, J.; Walker, I. (Eds.). (2009). <em>Reforma al sistema electoral chileno</em>. Santiago: PNUD; CEP; Libertad y Desarrollo; ProyectAmérica; Cieplan.</span>
         <a class="tiny-link" href="https://drive.google.com/file/d/1sA2aQHfJ893jTifs_PaQX4uIsWc2f8zO/view?usp=drive_link" target="_blank" rel="noopener noreferrer">GO</a>
@@ -284,10 +288,18 @@
         <span class="file-title">Brown, W. (2015). <em>Undoing the Demos: Neoliberalism’s Stealth Revolution</em>. New York: Zone Books.</span>
         <a class="tiny-link" href="https://press.princeton.edu/books/paperback/9781935408543/undoing-the-demos" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
-      <li class="item-row">
+<li class="item-row">
+  <span class="file-title">Caldwell, B.; Montes, L. (2015). "Friedrich Hayek and his visits to Chile." <em>The Review of Austrian Economics</em>, 28(3), 261–309.</span>
+  <a class="tiny-link" href="https://doi.org/10.1007/s11138-014-0277-5" target="_blank" rel="noopener noreferrer">GO</a>
+</li>
+    <li class="item-row">
         <span class="file-title">Cox, C.; Lemaitre, M. J. (1999). Market and state principles of reform in Chilean education: policies and results. In G. Perry & D. M. Leipziger (Eds.), <em>Chile: Recent Policy Lessons and Emerging Challenges</em>. Washington, DC: World Bank Publications, 149–188.</span>
         <a class="tiny-link" href="https://drive.google.com/file/d/1nzlZrE_j59Nje8Zgu85Ja217Esg7Qr3j/view?usp=drive_link" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
+<li class="item-row">
+  <span class="file-title">Davis-Hamel, A. (2012). Successful neoliberalism?: State policy, poverty, and income inequality in Chile. <em>International Social Science Review</em>, 87(3/4), 79–101.</span>
+  <a class="tiny-link" href="http://www.jstor.org/stable/41887539" target="_blank" rel="noopener noreferrer">GO</a>
+</li>
       <li class="item-row">
         <span class="file-title">Edwards, S. (2024). <em>The Chile Project: The Story of the Chicago Boys and the Downfall of Neoliberalism</em>. Princeton, NJ: Princeton University Press.</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
@@ -328,6 +340,10 @@
         <span class="file-title">Springer, S.; Birch, K.; MacLeavy, J. (Eds.). (2016). <em>The Handbook of Neoliberalism</em>. New York: Routledge.</span>
         <a class="tiny-link" href="https://www.routledge.com/The-Handbook-of-Neoliberalism/Springer-Birch-MacLeavy/p/book/9780367581602?srsltid=AfmBOoo39L0SsbGv_Q48nZ9cdjHsSzDMfU20zjW8RwpWnNgo980TD61M" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
+<li class="item-row">
+  <span class="file-title">Undurraga, T. (2015). Neoliberalism in Argentina and Chile: common antecedents, divergent paths. <em>Revista de Sociologia e Política</em>, 23(55), 11–34.</span>
+  <a class="tiny-link" href="https://doi.org/10.1590/1678-987315235502" target="_blank" rel="noopener noreferrer">GO</a>
+</li>
       <li class="item-row">
         <span class="file-title">Williamson, J. (1990). What Washington Means by Policy Reform. In J. Williamson (Ed.), <em>Latin American Adjustment: How Much Has Happened?</em> Washington, DC: Institute for International Economics, 5–20.</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
