--- a/lun/index.html
+++ b/lun/index.html
@@ -140,7 +140,7 @@
 <img src="/img/lun/20250808.jpeg">
 <img src="/img/lun/20250821.jpeg">
 <img src="/img/lun/20250822.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250911.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
