--- a/covers/index.html
+++ b/covers/index.html
@@ -156,7 +156,7 @@
 <div class="img-container">
     <img src="/img/20241029%20-%20El%20Mercurio.png">
     <img src="/img/20241029_2%20-%20El%20Mercurio.png"> 
-    <img src="/img/lun/blanco.jpeg">
+    <img src="/img/20251005%20-%20El%20Mercurio.png">
 </div>
 
 <div class="img-container">
