--- a/theseus/index.html
+++ b/theseus/index.html
@@ -138,25 +138,45 @@
     box-sizing:border-box;
     box-shadow:0 0 12px rgba(0,0,0,0.3);
   ">
-    <p style="margin:0;">
-      <strong>Chile's Transformation Amidst Crisis:<br>
-      The Theseus Paradox</strong><br><br>
-      <a href="https://kennethbunker.github.io/theseus/" target="_blank" rel="noopener noreferrer">
-        <img src="https://kennethbunker.github.io/img/book1.png" 
-             alt="Book cover" 
-             width="170" height="170" 
-             style="border:none;" 
-             loading="lazy" 
-             decoding="async">
-      </a><br><br>
-      NEW BOOK – 
-      <a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9"
-         target="_blank" 
-         rel="noopener noreferrer"
-         style="text-decoration:none;font-weight:bold;color:#0077cc;">
-         PRE-ORDER NOW
-      </a> – OCTOBER 2025
-    </p>
+
+    <div class="book-box" style="position: relative; display: inline-block; border: 1px solid #ccc; border-radius: 10px; padding: 20px;">
+      <p style="margin: 0;">
+        <strong>Chile's Transformation Amidst Crisis:<br>
+        The Theseus Paradox</strong><br><br>
+        <a href="https://kennethbunker.github.io/theseus/" target="_blank" style="position: relative; display: inline-block; text-decoration: none;">
+          <img src="https://kennethbunker.github.io/img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
+          <!-- Look Inside Tag -->
+          <span style="
+            position: absolute;
+            top: 20px;
+            right: 2px;
+            background: #e0e0e0;
+            color: #333;
+            font-size: 11px;
+            font-weight: bold;
+            padding: 3px 6px;
+            border-radius: 3px;
+            display: flex;
+            align-items: center;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+          ">
+            Look Inside
+            <span style="margin-left: 4px;">➔</span>
+          </span>
+        </a><br><br>
+
+        <span style="font-weight:bold;">BUY HERE:</span><br>
+        <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
+           target="_blank"
+           rel="noopener noreferrer"
+           style="text-decoration:none;font-weight:bold;color:#0077cc;">
+           PRE-ORDER NOW
+        </a><br><br>
+
+        <span style="color:#777;">Maybe later</span>
+      </p>
+    </div>
+
     <p style="margin-top:20px;">
       <a href="#" onclick="document.getElementById('bookPopup').style.display='none';return false;"
          style="color:#555;text-decoration:underline;">Close</a>
@@ -171,6 +191,7 @@ window.addEventListener('load', function() {
   }, 2000); // show popup 2 seconds after page load
 });
 </script>
+
 
 
 
