--- a/theseus/index.html
+++ b/theseus/index.html
@@ -130,57 +130,58 @@
   <div style="
     background:#fff;
     border:1px solid #999;
-    border-radius:12px;
-    padding:40px 20px;
-    max-width:420px;
-    width:90%;
+    border-radius:8px;
+    padding:40px;
+    width:360px;
+    height:360px;
     text-align:center;
     box-sizing:border-box;
     box-shadow:0 0 12px rgba(0,0,0,0.3);
   ">
 
-    <div class="book-box" style="position: relative; display: inline-block; border: 1px solid #ccc; border-radius: 10px; padding: 20px;">
-      <p style="margin: 0;">
+    <p style="margin:0; font-weight:bold; font-size:18px; margin-bottom:15px;">
+      BUY MY NEW BOOK
+    </p>
+
+    <div class="book-box" style="
+      position: relative;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 20px;
+    ">
+      <p style="margin:0;">
         <strong>Chile's Transformation Amidst Crisis:<br>
         The Theseus Paradox</strong><br><br>
-        <a href="https://kennethbunker.github.io/theseus/" target="_blank" style="position: relative; display: inline-block; text-decoration: none;">
-          <img src="https://kennethbunker.github.io/img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
-          <!-- Look Inside Tag -->
-          <span style="
-            position: absolute;
-            top: 20px;
-            right: 2px;
-            background: #e0e0e0;
-            color: #333;
-            font-size: 11px;
-            font-weight: bold;
-            padding: 3px 6px;
-            border-radius: 3px;
-            display: flex;
-            align-items: center;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-          ">
-            Look Inside
-            <span style="margin-left: 4px;">➔</span>
-          </span>
+
+        <a href="https://kennethbunker.github.io/theseus/"
+           target="_blank"
+           rel="noopener noreferrer"
+           style="text-decoration:none;">
+          <img src="https://kennethbunker.github.io/img/book1.png"
+               alt="Book Image"
+               width="170"
+               height="170"
+               style="border:none;">
         </a><br><br>
 
-        <span style="font-weight:bold;">BUY HERE:</span><br>
         <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
            target="_blank"
            rel="noopener noreferrer"
-           style="text-decoration:none;font-weight:bold;color:#0077cc;">
-           PRE-ORDER NOW
-        </a><br><br>
-
-        <span style="color:#777;">Maybe later</span>
+           style="text-decoration:none; font-weight:bold; color:#0077cc;">
+           BUY HERE
+        </a>
       </p>
     </div>
 
     <p style="margin-top:20px;">
-      <a href="#" onclick="document.getElementById('bookPopup').style.display='none';return false;"
-         style="color:#555;text-decoration:underline;">Close</a>
+      <a href="#"
+         onclick="document.getElementById('bookPopup').style.display='none';return false;"
+         style="color:#555;text-decoration:underline;">
+         Close
+      </a>
     </p>
+
   </div>
 </div>
 
@@ -191,7 +192,6 @@ window.addEventListener('load', function() {
   }, 2000); // show popup 2 seconds after page load
 });
 </script>
-
 
 
 
