--- a/theseus/index.html
+++ b/theseus/index.html
@@ -121,67 +121,78 @@
 <div id="bookPopup" style="
   display:none;
   position:fixed;
-  top:0; left:0; right:0; bottom:0;
+  inset:0;
   background:rgba(0,0,0,0.7);
   justify-content:center;
   align-items:center;
   z-index:9999;
 ">
+  <!-- SQUARE POPUP -->
   <div style="
     background:#fff;
     border:1px solid #999;
     border-radius:8px;
-    padding:40px;
     width:360px;
-    height:360px;
+    height:360px;              /* ensures the white background is a square */
     text-align:center;
     box-sizing:border-box;
     box-shadow:0 0 12px rgba(0,0,0,0.3);
+    padding:20px 20px 16px;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
   ">
 
-    <p style="margin:0; font-weight:bold; font-size:18px; margin-bottom:15px;">
-      BUY MY NEW BOOK
+    <!-- Top headline -->
+    <p style="margin:0; font-weight:bold; font-size:18px;">BUY MY NEW BOOK</p>
+
+    <!-- Title (kept outside the inner frame so the frame stays square) -->
+    <p style="margin:0 0 6px 0; line-height:1.3;">
+      <strong>Chile's Transformation Amidst Crisis:<br>The Theseus Paradox</strong>
     </p>
 
-    <div class="book-box" style="
-      position: relative;
-      display: inline-block;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 20px;
+    <!-- SQUARE INNER FRAME (boxed) -->
+    <div style="
+      margin:0 auto;
+      width:220px;
+      height:220px;            /* inner frame is a square */
+      border:1px solid #ccc;
+      border-radius:8px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      overflow:hidden;         /* keeps the image neatly inside */
     ">
-      <p style="margin:0;">
-        <strong>Chile's Transformation Amidst Crisis:<br>
-        The Theseus Paradox</strong><br><br>
-
-        <a href="https://kennethbunker.github.io/theseus/"
-           target="_blank"
-           rel="noopener noreferrer"
-           style="text-decoration:none;">
-          <img src="https://kennethbunker.github.io/img/book1.png"
-               alt="Book Image"
-               width="170"
-               height="170"
-               style="border:none;">
-        </a><br><br>
-
-        <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
-           target="_blank"
-           rel="noopener noreferrer"
-           style="text-decoration:none; font-weight:bold; color:#0077cc;">
-           BUY HERE
-        </a>
-      </p>
+      <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
+         target="_blank"
+         rel="noopener noreferrer nofollow sponsored"
+         style="display:inline-block; text-decoration:none;">
+        <img src="https://kennethbunker.github.io/img/book1.png"
+             alt="Book cover"
+             width="170"
+             height="170"
+             style="border:none; display:block;">
+      </a>
     </div>
 
-    <p style="margin-top:20px;">
-      <a href="#"
-         onclick="document.getElementById('bookPopup').style.display='none';return false;"
-         style="color:#555;text-decoration:underline;">
-         Close
+    <!-- Buy link -->
+    <p style="margin:8px 0 0 0;">
+      <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
+         target="_blank"
+         rel="noopener noreferrer nofollow sponsored"
+         style="text-decoration:none; font-weight:bold; color:#0077cc;">
+        BUY HERE
       </a>
     </p>
 
+    <!-- Close -->
+    <p style="margin:0;">
+      <a href="#"
+         onclick="document.getElementById('bookPopup').style.display='none';return false;"
+         style="color:#555; text-decoration:underline;">
+        Close
+      </a>
+    </p>
   </div>
 </div>
 
