--- a/theseus/index.html
+++ b/theseus/index.html
@@ -127,70 +127,73 @@
   align-items:center;
   z-index:9999;
 ">
-  <!-- SQUARE POPUP -->
+  <!-- OUTER WHITE SQUARE -->
   <div style="
     background:#fff;
     border:1px solid #999;
     border-radius:8px;
-    width:360px;
-    height:360px;              /* ensures the white background is a square */
+    width:380px;
+    height:380px;
     text-align:center;
     box-sizing:border-box;
     box-shadow:0 0 12px rgba(0,0,0,0.3);
-    padding:20px 20px 16px;
+    padding:20px;
     display:flex;
     flex-direction:column;
     justify-content:space-between;
   ">
 
-    <!-- Top headline -->
-    <p style="margin:0; font-weight:bold; font-size:18px;">BUY MY NEW BOOK</p>
+    <!-- OUTSIDE FRAME TEXT -->
+    <p style="margin:0; font-weight:bold; font-size:18px;">Read my book</p>
 
-    <!-- Title (kept outside the inner frame so the frame stays square) -->
-    <p style="margin:0 0 6px 0; line-height:1.3;">
-      <strong>Chile's Transformation Amidst Crisis:<br>The Theseus Paradox</strong>
-    </p>
-
-    <!-- SQUARE INNER FRAME (boxed) -->
+    <!-- INNER SQUARE FRAME -->
     <div style="
       margin:0 auto;
-      width:220px;
-      height:220px;            /* inner frame is a square */
+      width:260px;
+      height:260px;
       border:1px solid #ccc;
       border-radius:8px;
       display:flex;
+      flex-direction:column;
       align-items:center;
-      justify-content:center;
-      overflow:hidden;         /* keeps the image neatly inside */
+      justify-content:space-between;
+      padding:15px;
+      box-sizing:border-box;
     ">
+
+      <!-- Book Title -->
+      <p style="margin:0; font-weight:bold; font-size:14px; line-height:1.3;">
+        Chile's Transformation Amidst Crisis:<br>The Theseus Paradox
+      </p>
+
+      <!-- Book Image -->
       <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
          target="_blank"
          rel="noopener noreferrer nofollow sponsored"
-         style="display:inline-block; text-decoration:none;">
+         style="text-decoration:none;">
         <img src="https://kennethbunker.github.io/img/book1.png"
              alt="Book cover"
-             width="170"
-             height="170"
+             width="150"
+             height="150"
              style="border:none; display:block;">
       </a>
-    </div>
 
-    <!-- Buy link -->
-    <p style="margin:8px 0 0 0;">
+      <!-- BUY LINK -->
       <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
          target="_blank"
          rel="noopener noreferrer nofollow sponsored"
          style="text-decoration:none; font-weight:bold; color:#0077cc;">
-        BUY HERE
+         BUY HERE
       </a>
-    </p>
 
-    <!-- Close -->
+    </div>
+
+    <!-- CLOSE LINK -->
     <p style="margin:0;">
       <a href="#"
          onclick="document.getElementById('bookPopup').style.display='none';return false;"
          style="color:#555; text-decoration:underline;">
-        Close
+         Close
       </a>
     </p>
   </div>
@@ -203,6 +206,7 @@ window.addEventListener('load', function() {
   }, 2000); // show popup 2 seconds after page load
 });
 </script>
+
 
 
 
