--- a/interviews/index.html
+++ b/interviews/index.html
@@ -64,6 +64,108 @@
 
     <body>
 
+
+
+<!-- Popup Modal -->
+<div id="bookPopup" style="
+  display:none;
+  position:fixed;
+  inset:0;
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
+  background-color:rgba(0,0,0,0.5);
+  background-image:url('data:image/svg+xml;utf8,
+    <svg xmlns=\'http://www.w3.org/2000/svg\' width=\'100\' height=\'100\' viewBox=\'0 0 100 100\'>
+      <rect width=\'100\' height=\'100\' fill=\'white\'/>
+      <path d=\'M0 0h20v20h20v20h20v20h20v20h-20v-20h-20v-20h-20v-20H0z\' 
+            fill=\'none\' stroke=\'%23cccccc\' stroke-width=\'1\' opacity=\'0.1\'/>
+    </svg>');
+  background-repeat:repeat;
+  background-size:100px 100px;
+">
+
+  <!-- OUTER WHITE SQUARE -->
+  <div style="
+    background:#fff;
+    border:1px solid #999;
+    border-radius:8px;
+    width:380px;
+    height:380px;
+    text-align:center;
+    box-sizing:border-box;
+    box-shadow:0 0 12px rgba(0,0,0,0.3);
+    padding:20px;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+  ">
+
+    <!-- OUTSIDE FRAME TEXT -->
+    <p style="margin:0; font-weight:bold; font-size:18px;">Read my book</p>
+
+    <!-- INNER SQUARE FRAME -->
+    <div style="
+      margin:0 auto;
+      width:260px;
+      height:260px;
+      border:1px solid #ccc;
+      border-radius:8px;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:space-between;
+      padding:15px;
+      box-sizing:border-box;
+    ">
+
+      <!-- Book Title -->
+      <p style="margin:0; font-weight:bold; font-size:14px; line-height:1.3;">
+        Chile's Transformation Amidst Crisis:<br>The Theseus Paradox
+      </p>
+
+      <!-- Book Image -->
+      <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
+         target="_blank"
+         rel="noopener noreferrer nofollow sponsored"
+         style="text-decoration:none;">
+        <img src="https://kennethbunker.github.io/img/book1.png"
+             alt="Book cover"
+             width="150"
+             height="150"
+             style="border:none; display:block;">
+      </a>
+
+      <!-- BUY LINK -->
+      <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
+         target="_blank"
+         rel="noopener noreferrer nofollow sponsored"
+         style="text-decoration:none; font-weight:bold; color:#0077cc;">
+         BUY HERE
+      </a>
+
+    </div>
+
+    <!-- CLOSE LINK -->
+    <p style="margin:0;">
+      <a href="#"
+         onclick="document.getElementById('bookPopup').style.display='none';return false;"
+         style="color:#555; text-decoration:underline;">
+         Close
+      </a>
+    </p>
+  </div>
+</div>
+
+<script>
+window.addEventListener('load', function() {
+  setTimeout(function() {
+    document.getElementById('bookPopup').style.display = 'flex';
+  }, 2000); // show popup 2 seconds after page load
+});
+</script>
+
+
 <!-- Clickable Top Banner -->
 <a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview" target="_blank" style="text-decoration: none;">
   <div class="banner-container">
