--- a/interviews/index.html
+++ b/interviews/index.html
@@ -67,6 +67,7 @@
 
 
 <!-- Popup Modal -->
+<!-- Popup Modal -->
 <div id="bookPopup" style="
   display:none;
   position:fixed;
@@ -74,15 +75,20 @@
   justify-content:center;
   align-items:center;
   z-index:9999;
-  background-color:rgba(0,0,0,0.5);
+
+  /* lighter overlay so pattern shows through */
+  background-color:rgba(0,0,0,0.35);
+
+  /* Greek-key style repeating pattern */
   background-image:url('data:image/svg+xml;utf8,
-    <svg xmlns=\'http://www.w3.org/2000/svg\' width=\'100\' height=\'100\' viewBox=\'0 0 100 100\'>
-      <rect width=\'100\' height=\'100\' fill=\'white\'/>
-      <path d=\'M0 0h20v20h20v20h20v20h20v20h-20v-20h-20v-20h-20v-20H0z\' 
-            fill=\'none\' stroke=\'%23cccccc\' stroke-width=\'1\' opacity=\'0.1\'/>
+    <svg xmlns=\'http://www.w3.org/2000/svg\' width=\'80\' height=\'80\' viewBox=\'0 0 80 80\'>
+      <rect width=\'80\' height=\'80\' fill=\'white\'/>
+      <path d=\'M0 0h20v20h20v20h20v20h-20v-20h-20v-20h-20v-20z
+                M40 0h20v20h-20v20h20v20h-20v20h-20v-20h20v-20h-20v-20h20z\' 
+            fill=\'none\' stroke=\'%23bbbbbb\' stroke-width=\'1\' opacity=\'0.25\'/>
     </svg>');
   background-repeat:repeat;
-  background-size:100px 100px;
+  background-size:80px 80px;
 ">
 
   <!-- OUTER WHITE SQUARE -->
@@ -119,34 +125,25 @@
       box-sizing:border-box;
     ">
 
-      <!-- Book Title -->
       <p style="margin:0; font-weight:bold; font-size:14px; line-height:1.3;">
         Chile's Transformation Amidst Crisis:<br>The Theseus Paradox
       </p>
 
-      <!-- Book Image -->
       <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
-         target="_blank"
-         rel="noopener noreferrer nofollow sponsored"
+         target="_blank" rel="noopener noreferrer nofollow sponsored"
          style="text-decoration:none;">
         <img src="https://kennethbunker.github.io/img/book1.png"
-             alt="Book cover"
-             width="150"
-             height="150"
+             alt="Book cover" width="150" height="150"
              style="border:none; display:block;">
       </a>
 
-      <!-- BUY LINK -->
       <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
-         target="_blank"
-         rel="noopener noreferrer nofollow sponsored"
+         target="_blank" rel="noopener noreferrer nofollow sponsored"
          style="text-decoration:none; font-weight:bold; color:#0077cc;">
          BUY HERE
       </a>
-
     </div>
 
-    <!-- CLOSE LINK -->
     <p style="margin:0;">
       <a href="#"
          onclick="document.getElementById('bookPopup').style.display='none';return false;"
@@ -161,9 +158,10 @@
 window.addEventListener('load', function() {
   setTimeout(function() {
     document.getElementById('bookPopup').style.display = 'flex';
-  }, 2000); // show popup 2 seconds after page load
+  }, 2000);
 });
 </script>
+
 
 
 <!-- Clickable Top Banner -->
