--- a/interviews/index.html
+++ b/interviews/index.html
@@ -67,7 +67,6 @@
 
 
 <!-- Popup Modal -->
-<!-- Popup Modal -->
 <div id="bookPopup" style="
   display:none;
   position:fixed;
@@ -75,23 +74,11 @@
   justify-content:center;
   align-items:center;
   z-index:9999;
-
-  /* lighter overlay so pattern shows through */
   background-color:rgba(0,0,0,0.35);
-
-  /* Greek-key style repeating pattern */
-  background-image:url('data:image/svg+xml;utf8,
-    <svg xmlns=\'http://www.w3.org/2000/svg\' width=\'80\' height=\'80\' viewBox=\'0 0 80 80\'>
-      <rect width=\'80\' height=\'80\' fill=\'white\'/>
-      <path d=\'M0 0h20v20h20v20h20v20h-20v-20h-20v-20h-20v-20z
-                M40 0h20v20h-20v20h20v20h-20v20h-20v-20h20v-20h-20v-20h20z\' 
-            fill=\'none\' stroke=\'%23bbbbbb\' stroke-width=\'1\' opacity=\'0.25\'/>
-    </svg>');
+  background-image:url('data:image/svg+xml;utf8,<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;80&quot; height=&quot;80&quot; viewBox=&quot;0 0 80 80&quot;><rect width=&quot;80&quot; height=&quot;80&quot; fill=&quot;white&quot;/><path d=&quot;M0 0h20v20h20v20h20v20h-20v-20h-20v-20h-20v-20z M40 0h20v20h-20v20h20v20h-20v20h-20v-20h20v-20h-20v-20h20z&quot; fill=&quot;none&quot; stroke=&quot;%23bbbbbb&quot; stroke-width=&quot;1&quot; opacity=&quot;0.25&quot;/></svg>');
   background-repeat:repeat;
   background-size:80px 80px;
 ">
-
-  <!-- OUTER WHITE SQUARE -->
   <div style="
     background:#fff;
     border:1px solid #999;
@@ -106,11 +93,8 @@
     flex-direction:column;
     justify-content:space-between;
   ">
-
-    <!-- OUTSIDE FRAME TEXT -->
     <p style="margin:0; font-weight:bold; font-size:18px;">Read my book</p>
 
-    <!-- INNER SQUARE FRAME -->
     <div style="
       margin:0 auto;
       width:260px;
@@ -124,11 +108,9 @@
       padding:15px;
       box-sizing:border-box;
     ">
-
       <p style="margin:0; font-weight:bold; font-size:14px; line-height:1.3;">
         Chile's Transformation Amidst Crisis:<br>The Theseus Paradox
       </p>
-
       <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
          target="_blank" rel="noopener noreferrer nofollow sponsored"
          style="text-decoration:none;">
@@ -136,7 +118,6 @@
              alt="Book cover" width="150" height="150"
              style="border:none; display:block;">
       </a>
-
       <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
          target="_blank" rel="noopener noreferrer nofollow sponsored"
          style="text-decoration:none; font-weight:bold; color:#0077cc;">
@@ -145,11 +126,7 @@
     </div>
 
     <p style="margin:0;">
-      <a href="#"
-         onclick="document.getElementById('bookPopup').style.display='none';return false;"
-         style="color:#555; text-decoration:underline;">
-         Close
-      </a>
+      <a href="#" onclick="document.getElementById('bookPopup').style.display='none';return false;" style="color:#555; text-decoration:underline;">Close</a>
     </p>
   </div>
 </div>
