--- a/interviews/index.html
+++ b/interviews/index.html
@@ -74,13 +74,14 @@
   justify-content:center;
   align-items:center;
   z-index:9999;
-  background-color:rgba(0,0,0,0.35);
-  background-image:url('data:image/svg+xml;utf8,<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;80&quot; height=&quot;80&quot; viewBox=&quot;0 0 80 80&quot;><rect width=&quot;80&quot; height=&quot;80&quot; fill=&quot;white&quot;/><path d=&quot;M0 0h20v20h20v20h20v20h-20v-20h-20v-20h-20v-20z M40 0h20v20h-20v20h20v20h-20v20h-20v-20h20v-20h-20v-20h20z&quot; fill=&quot;none&quot; stroke=&quot;%23bbbbbb&quot; stroke-width=&quot;1&quot; opacity=&quot;0.25&quot;/></svg>');
-  background-repeat:repeat;
-  background-size:80px 80px;
+  background-color:rgba(0,0,0,0.45);
 ">
+  <!-- OUTER WHITE SQUARE WITH GREEK PATTERN BACKGROUND -->
   <div style="
-    background:#fff;
+    background-color:#fff;
+    background-image:url('https://yourdomain.com/img/greek_pattern.png'); /* <-- replace with your hosted image URL */
+    background-repeat:repeat;
+    background-size:contain; /* try '100px 100px' or 'cover' depending on pattern tile */
     border:1px solid #999;
     border-radius:8px;
     width:380px;
@@ -93,8 +94,11 @@
     flex-direction:column;
     justify-content:space-between;
   ">
+
+    <!-- OUTSIDE FRAME TEXT -->
     <p style="margin:0; font-weight:bold; font-size:18px;">Read my book</p>
 
+    <!-- INNER SQUARE FRAME -->
     <div style="
       margin:0 auto;
       width:260px;
@@ -107,26 +111,40 @@
       justify-content:space-between;
       padding:15px;
       box-sizing:border-box;
+      background:rgba(255,255,255,0.9); /* adds contrast to ensure text readable */
     ">
+
+      <!-- Book Title -->
       <p style="margin:0; font-weight:bold; font-size:14px; line-height:1.3;">
         Chile's Transformation Amidst Crisis:<br>The Theseus Paradox
       </p>
+
+      <!-- Book Image -->
       <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
          target="_blank" rel="noopener noreferrer nofollow sponsored"
          style="text-decoration:none;">
         <img src="https://kennethbunker.github.io/img/book1.png"
-             alt="Book cover" width="150" height="150"
+             alt="Book cover"
+             width="150" height="150"
              style="border:none; display:block;">
       </a>
+
+      <!-- BUY LINK -->
       <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
          target="_blank" rel="noopener noreferrer nofollow sponsored"
          style="text-decoration:none; font-weight:bold; color:#0077cc;">
          BUY HERE
       </a>
+
     </div>
 
+    <!-- CLOSE LINK -->
     <p style="margin:0;">
-      <a href="#" onclick="document.getElementById('bookPopup').style.display='none';return false;" style="color:#555; text-decoration:underline;">Close</a>
+      <a href="#"
+         onclick="document.getElementById('bookPopup').style.display='none';return false;"
+         style="color:#555; text-decoration:underline;">
+         Close
+      </a>
     </p>
   </div>
 </div>
@@ -135,7 +153,7 @@
 window.addEventListener('load', function() {
   setTimeout(function() {
     document.getElementById('bookPopup').style.display = 'flex';
-  }, 2000);
+  }, 2000); // show popup 2 seconds after page load
 });
 </script>
 
