--- a/interviews/index.html
+++ b/interviews/index.html
@@ -79,7 +79,7 @@
   <!-- OUTER WHITE SQUARE WITH GREEK PATTERN BACKGROUND -->
   <div style="
     background-color:#fff;
-    background-image:url('https://yourdomain.com/img/greek_pattern.png'); /* <-- replace with your hosted image URL */
+    background-image:url('https://kennethbunker.github.io/img/greek_pattern.png/'); /* <-- replace with your hosted image URL */
     background-repeat:repeat;
     background-size:contain; /* try '100px 100px' or 'cover' depending on pattern tile */
     border:1px solid #999;
