--- a/interviews/index.html
+++ b/interviews/index.html
@@ -76,76 +76,83 @@
   z-index:9999;
   background-color:rgba(0,0,0,0.45);
 ">
+
   <!-- OUTER WHITE SQUARE WITH GREEK PATTERN BACKGROUND -->
   <div style="
-    background-color:#fff;
-    background-image:url('https://kennethbunker.github.io/img/greek_pattern.png/'); /* <-- replace with your hosted image URL */
-    background-repeat:repeat;
-    background-size:contain; /* try '100px 100px' or 'cover' depending on pattern tile */
-    border:1px solid #999;
-    border-radius:8px;
+    position:relative;
     width:380px;
     height:380px;
+    border:1px solid #999;
+    border-radius:8px;
+    box-shadow:0 0 12px rgba(0,0,0,0.3);
     text-align:center;
     box-sizing:border-box;
-    box-shadow:0 0 12px rgba(0,0,0,0.3);
     padding:20px;
     display:flex;
     flex-direction:column;
     justify-content:space-between;
+    overflow:hidden;
   ">
-
-    <!-- OUTSIDE FRAME TEXT -->
-    <p style="margin:0; font-weight:bold; font-size:18px;">Read my book</p>
-
-    <!-- INNER SQUARE FRAME -->
+    <!-- Faint pattern overlay -->
     <div style="
-      margin:0 auto;
-      width:260px;
-      height:260px;
-      border:1px solid #ccc;
-      border-radius:8px;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:space-between;
-      padding:15px;
-      box-sizing:border-box;
-      background:rgba(255,255,255,0.9); /* adds contrast to ensure text readable */
-    ">
+      position:absolute;
+      inset:0;
+      background-image:url('https://kennethbunker.github.io/img/greek_pattern.png'); /* <-- replace with your pattern URL */
+      background-repeat:repeat;
+      background-size:120px 120px;
+      opacity:0.08;               /* make pattern very faint */
+      filter:grayscale(1) brightness(0.8);
+      z-index:0;
+    "></div>
 
-      <!-- Book Title -->
-      <p style="margin:0; font-weight:bold; font-size:14px; line-height:1.3;">
-        Chile's Transformation Amidst Crisis:<br>The Theseus Paradox
+    <!-- CONTENT -->
+    <div style="position:relative; z-index:1; background:transparent;">
+      <!-- OUTSIDE FRAME TEXT -->
+      <p style="margin:0; font-weight:bold; font-size:18px;">Read my book</p>
+
+      <!-- INNER SQUARE FRAME -->
+      <div style="
+        margin:20px auto;
+        width:260px;
+        height:260px;
+        border:1px solid #ccc;
+        border-radius:8px;
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        justify-content:space-between;
+        padding:15px;
+        box-sizing:border-box;
+        background:rgba(255,255,255,0.9);
+      ">
+
+        <p style="margin:0; font-weight:bold; font-size:14px; line-height:1.3;">
+          Chile's Transformation Amidst Crisis:<br>The Theseus Paradox
+        </p>
+
+        <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
+           target="_blank" rel="noopener noreferrer nofollow sponsored"
+           style="text-decoration:none;">
+          <img src="https://kennethbunker.github.io/img/book1.png"
+               alt="Book cover" width="150" height="150"
+               style="border:none; display:block;">
+        </a>
+
+        <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
+           target="_blank" rel="noopener noreferrer nofollow sponsored"
+           style="text-decoration:none; font-weight:bold; color:#0077cc;">
+           BUY HERE
+        </a>
+      </div>
+
+      <p style="margin:0;">
+        <a href="#"
+           onclick="document.getElementById('bookPopup').style.display='none';return false;"
+           style="color:#555; text-decoration:underline;">
+           Close
+        </a>
       </p>
-
-      <!-- Book Image -->
-      <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
-         target="_blank" rel="noopener noreferrer nofollow sponsored"
-         style="text-decoration:none;">
-        <img src="https://kennethbunker.github.io/img/book1.png"
-             alt="Book cover"
-             width="150" height="150"
-             style="border:none; display:block;">
-      </a>
-
-      <!-- BUY LINK -->
-      <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626"
-         target="_blank" rel="noopener noreferrer nofollow sponsored"
-         style="text-decoration:none; font-weight:bold; color:#0077cc;">
-         BUY HERE
-      </a>
-
     </div>
-
-    <!-- CLOSE LINK -->
-    <p style="margin:0;">
-      <a href="#"
-         onclick="document.getElementById('bookPopup').style.display='none';return false;"
-         style="color:#555; text-decoration:underline;">
-         Close
-      </a>
-    </p>
   </div>
 </div>
 
@@ -153,10 +160,12 @@
 window.addEventListener('load', function() {
   setTimeout(function() {
     document.getElementById('bookPopup').style.display = 'flex';
-  }, 2000); // show popup 2 seconds after page load
+  }, 2000);
 });
 </script>
 
+
+  
 
 
 <!-- Clickable Top Banner -->
