--- a/lun/index.html
+++ b/lun/index.html
@@ -141,10 +141,10 @@
 <img src="/img/lun/20250821.jpeg">
 <img src="/img/lun/20250822.jpeg">
 <img src="/img/lun/20250911.jpeg">
-<img src="/img/lun/blanco.jpeg">
-<img src="/img/lun/blanco.jpeg">
-<img src="/img/lun/blanco.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250926.jpeg">
+<img src="/img/lun/20251009.jpeg">
+<img src="/img/lun/20251013.jpeg">
+<img src="/img/lun/20251015.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 </div>
