--- a/lun/index.html
+++ b/lun/index.html
@@ -145,7 +145,7 @@
 <img src="/img/lun/20251009.jpeg">
 <img src="/img/lun/20251013.jpeg">
 <img src="/img/lun/20251015.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20251016.jpeg">
 <img src="/img/lun/blanco.jpeg">
 </div>
 
