--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
 <ul>
 
 
+<li><strong>Diario Financiero</strong>. <a href="https://www.df.cl/economia-y-politica/politica/expectativa-parlamentaria-por-impacto-de-la-franja-electoral-en-las">Expectativa parlamentaria por impacto de la franja electoral en las campañas.</a> 16 October, 2025.</li>
 
 <li><strong>Radio Nostálgica</strong>. <a href="https://www.nostalgica.cl/queda-centro-politico-expertos-ponderan-rol-de-matthei-y-el-escenario-que-enfrenta-el-votante-obligado/">¿Queda “centro político”?: Expertos ponderan rol de Matthei y el escenario que enfrenta el “votante obligado”.</a> 15 October, 2025.</li>
 
