--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       </span>
     </a><br><br>
     NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> -  
-    <a href="https://kennethbunker.github.io/theseus/" style="text-decoration: none; font-weight: bold; color: #0077cc;">NOVEMBER 2025</a>
+    <a href="https://kennethbunker.github.io/theseus/" style="text-decoration: none; font-weight: bold; color: #0077cc;">COMING SOON</a>
   </p>
 </div>
 
