--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/#in-the-press">In the Press</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/#en-la-prensa">Prensa</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">Columns</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">Book</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview">Book</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">Contact</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2 d-flex align-items-center justify-content-center"
      href="https://www.amazon.com/author/kennethbunker"
@@ -226,7 +226,7 @@
   <p style="margin: 0;">
     <strong>Chile's Transformation Amidst Crisis:<br>
     The Theseus Paradox</strong><br><br>
-    <a href="https://kennethbunker.github.io/theseus/" target="_blank" style="position: relative; display: inline-block;">
+    <a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview" target="_blank" style="position: relative; display: inline-block;">
       <img src="../img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
       <!-- Look Inside Tag -->
       <span style="
@@ -322,7 +322,7 @@
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">In the Press</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">Prensa</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">Columns</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">Book</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview">Book</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">Contact</a>
 </div>
 
