--- a/covers/index.html
+++ b/covers/index.html
@@ -196,7 +196,7 @@
 
 <div class="img-container">
     <img src="/img/20240923%20-%20La%20Segunda.png"> 
-    <img src="/img/lun/blanco.jpeg">
+    <img src="/img/20251021%20-%20La%20Segunda.png"> 
     <img src="/img/lun/blanco.jpeg">
 </div>
 
