--- a/theseus/index.html
+++ b/theseus/index.html
@@ -60,7 +60,7 @@
 
   <!-- Social Sharing Meta Tags for Book Page -->
   <meta property="og:title" content="Chile's Transformation Amidst Crisis: The Theseus Paradox – Kenneth Bunker">
-  <meta property="og:description" content="Explore Kenneth Bunker's new book on Chile's political evolution and constitutional reform. Pre-order now from Springer and other retailers.">
+  <meta property="og:description" content="Explore Kenneth Bunker's new book on Chile's political evolution and constitutional reform. Order now from Springer and other retailers.">
   <meta property="og:image" content="https://kennethbunker.github.io/img/book1.png">
   <meta property="og:image:secure_url" content="https://kennethbunker.github.io/img/book1.png">
   <meta property="og:image:type" content="image/png">
@@ -78,7 +78,7 @@
   <!-- Twitter Card Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="The Theseus Paradox – Kenneth Bunker's New Book">
-  <meta name="twitter:description" content="A detailed study of Chile’s crisis and political transformation. Available for pre-order now.">
+  <meta name="twitter:description" content="A detailed study of Chile’s crisis and political transformation. Available for order now.">
   <meta name="twitter:image" content="https://kennethbunker.github.io/img/book1.png">
   <meta name="twitter:site" content="@kennethbunker">
 
@@ -217,7 +217,7 @@ window.addEventListener('load', function() {
   <a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
     <div class="banner-container">
       <!-- ⚠️ LCP: keep hero image NOT lazy for faster Largest Contentful Paint -->
-      <img src="https://kennethbunker.github.io/img/banner.jpg" alt="Pre-order The Theseus Paradox" class="banner-image">
+      <img src="https://kennethbunker.github.io/img/banner.jpg" alt="Order The Theseus Paradox" class="banner-image">
     </div>
   </a>
 
@@ -263,7 +263,7 @@ window.addEventListener('load', function() {
             <!-- ✅ PERF: lazy-load non-hero images + decoding hint -->
             <img src="https://kennethbunker.github.io/img/book1.png" alt="Book cover" width="170" height="170" style="border: none;" loading="lazy" decoding="async">
           </a><br><br>
-          NEW BOOK – <a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> – COMING SOON
+          NEW BOOK – <a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">OUT TODAY</a> – BUY NOW
         </p>
       </div>
 
