--- a/theseus/index.html
+++ b/theseus/index.html
@@ -1016,12 +1016,11 @@ window.addEventListener('load', function() {
 
           <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96463-3_18" target="_blank" rel="noopener noreferrer" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96463-3_18</a><br><br>
 
-          <div class="resources-links" style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-            <!-- ✅ UX: Disabled FULL TEXT until available -->
-            <button class="btn btn-sm btn-outline-secondary font-weight-bold" disabled style="pointer-events:none;">FULL TEXT</button>
+          <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
+            <a href="https://doi.org/10.1007/978-3-031-96463-3_18" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT <span class="sr-only">— Chapter 18</span></a>
             <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA <span class="sr-only">— Chapter 18</span></a>
             <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE <span class="sr-only">— Chapter 18</span></a>
-            <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA <span class="sr-only">— Chapter 18</span></a>
+            <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA <span class="sr-only">— Chapter 17</span></a>
           </div>
 
           <div style="text-align: left; max-width: 600px; margin: 0 auto;">
@@ -1050,12 +1049,11 @@ window.addEventListener('load', function() {
 
           <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96463-3_19" target="_blank" rel="noopener noreferrer" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96463-3_19</a><br><br>
 
-          <div class="resources-links" style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-            <!-- ✅ UX: Disabled FULL TEXT until available -->
-            <button class="btn btn-sm btn-outline-secondary font-weight-bold" disabled style="pointer-events:none;">FULL TEXT</button>
+          <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
+            <a href="https://doi.org/10.1007/978-3-031-96463-3_19" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT <span class="sr-only">— Chapter 19</span></a>
             <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA <span class="sr-only">— Chapter 19</span></a>
             <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE <span class="sr-only">— Chapter 19</span></a>
-            <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA <span class="sr-only">— Chapter 19</span></a>
+            <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA <span class="sr-only">— Chapter 17</span></a>
           </div>
 
           <div style="text-align: left; max-width: 600px; margin: 0 auto;">
