--- a/theseus/index.html
+++ b/theseus/index.html
@@ -307,11 +307,7 @@ window.addEventListener('load', function() {
                 <h5 class="card-title mb-1">Frontmatter</h5>
                 <p class="card-text">Preface, acknowledgment</p>
                 <div class="mt-auto">
-                  <!-- ✅ UX: replace dead '#' link with disabled button until ready -->
-                  <button class="btn btn-sm btn-outline-secondary" disabled>Coming soon</button>
-                  <!-- TODO: When ready, restore as link:
-                  <a class="btn btn-sm btn-outline-primary" href="https://..." target="_blank" rel="noopener noreferrer">Download (PDF)</a>
-                  -->
+                  <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/files/Theseus_Front_Matter.pdf" target="_blank" rel="noopener noreferrer">Download</a>
                 </div>
               </div>
             </div>
@@ -324,8 +320,7 @@ window.addEventListener('load', function() {
                 <h5 class="card-title mb-1">TOC</h5>
                 <p class="card-text">Table of contents</p>
                 <div class="mt-auto">
-                  <!-- ✅ UX: disabled until URL exists -->
-                  <button class="btn btn-sm btn-outline-secondary" disabled>Coming soon</button>
+                  <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/files/Theseus_Front_Matter.pdf" target="_blank" rel="noopener noreferrer">Download</a>
                 </div>
               </div>
             </div>
@@ -338,8 +333,7 @@ window.addEventListener('load', function() {
                 <h5 class="card-title mb-1">Backmatter</h5>
                 <p class="card-text">Index and Appendix</p>
                 <div class="mt-auto">
-                  <!-- ✅ UX: disabled until URL exists -->
-                  <button class="btn btn-sm btn-outline-secondary" disabled>Coming soon</button>
+                  <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/files/Theseus_Back_Matter.pdf" target="_blank" rel="noopener noreferrer">Download</a>
                 </div>
               </div>
             </div>
