--- a/theseus/index.html
+++ b/theseus/index.html
@@ -320,7 +320,7 @@ window.addEventListener('load', function() {
                 <h5 class="card-title mb-1">TOC</h5>
                 <p class="card-text">Table of contents</p>
                 <div class="mt-auto">
-                  <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/files/Theseus_Front_Matter.pdf" target="_blank" rel="noopener noreferrer">Download</a>
+                  <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/files/Theseus_TOC.pdf" target="_blank" rel="noopener noreferrer">Download</a>
                 </div>
               </div>
             </div>
