--- a/index.html
+++ b/index.html
@@ -272,6 +272,8 @@
 <ul>
 
 
+<p>2025. <em>Chile's Transformation Amidst Crisis: The Theseus Paradox</em>. Palgrave Macmillan (368 pages) <a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview4">doi</a></mark></p>
+
 <p>2025. “Challenging Conventional Wisdom in New Democracies: Social Diversity, Electoral Rules, and Party System Fragmentation in Chile.”<em>Election Law Journal: Rules, Politics, and Policy</em>. <a href="https://doi.org/10.1089/elj.2024.0064">doi</a></mark></p>
 
 <p>2025.“Electoral Forecasting in Volatile Party System Settings: Assessing and Improving Pre-Election Poll Predictions in Italy.”<em>Social Science Computer Review</em>. <a href="https://doi.org/10.1177/08944393251328309">doi</a></mark></p>
