--- a/index.html
+++ b/index.html
@@ -2395,6 +2395,8 @@ ong>El Muro</strong>. <a href="http://elmuro.cl/noticias/ps-la-dc-los-partidos-t
 <ul>
 
 
+<li><strong>Financial Times</strong>. <a href="https://on.ft.com/4hXM5XM">Communist and far-right leaders battle for Chile’s presidency.</a> 14 November, 2025.</li> 
+
 <li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/features/2025-11-14/chile-presidential-race-conservative-kast-wants-to-deport-migrants">Anti-Crime, Anti-Migrant Pitch Boosts Chilean Christian Nationalist Kast.</a> 13 November, 2025.</li> 
 
 <li><strong>Clarín</strong>. <a href="https://www.clarin.com/mundo/elecciones-chile-actos-masivos-guerra-discursos-cierre-campana-polarizada-certezas_0_ThApJq4Pdn.html">Elecciones en Chile: actos masivos y una guerra de discursos en el cierre de una campaña polarizada y sin certezas.</a> 13 November, 2025.</li> 
