--- a/press/index.html
+++ b/press/index.html
@@ -134,6 +134,15 @@
 <hr> 
 <ul>
 
+<li><strong>Financial Times</strong>. <a href="https://on.ft.com/4hXM5XM">Communist and far-right leaders battle for Chile’s presidency.</a> 14 November, 2025.</li> 
+
+<li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/features/2025-11-14/chile-presidential-race-conservative-kast-wants-to-deport-migrants">Anti-Crime, Anti-Migrant Pitch Boosts Chilean Christian Nationalist Kast.</a> 13 November, 2025.</li> 
+
+<li><strong>Clarín</strong>. <a href="https://www.clarin.com/mundo/elecciones-chile-actos-masivos-guerra-discursos-cierre-campana-polarizada-certezas_0_ThApJq4Pdn.html">Elecciones en Chile: actos masivos y una guerra de discursos en el cierre de una campaña polarizada y sin certezas.</a> 13 November, 2025.</li> 
+
+<li><strong>El Comercio</strong>. <a href="https://elcomercio.pe/mundo/latinoamerica/elecciones-chile-2025-el-voto-obligatorio-y-el-voto-migrante-llenan-de-incertidumbre-eleccion-inedita-ultimas-noticia/">Chile: el voto obligatorio y el voto migrante llenan de incertidumbre elección inédita.</a> 13 November, 2025.</li> 
+
+<li><strong>Deutsche Welle</strong>. <a href="https://amp.dw.com/es/por-qui%C3%A9n-votar%C3%A1n-los-migrantes-en-chile/a-74718862">¿Por quién votarán los migrantes en Chile?.</a> 12 November, 2025.</li> 
 
 <li><strong>Investing</strong>. <a href="https://www.investing.com/news/economic-indicators/bolivias-swing-right-sounds-alarm-for-latin-american-leftists-4204238">Bolivia's swing right sounds alarm for Latin American leftists.</a> 21 August, 2025.</li> 
 
