--- a/columns/index.html
+++ b/columns/index.html
@@ -35,7 +35,7 @@
     "@context": "https://schema.org",
     "@type": "CollectionPage",
     "name": "Columns by Kenneth Bunker",
-    "description": "Kenneth Bunker’s columns published in Chilean media outlets including Ex-Ante, CIPER, and La Tercera. Focused on democracy, political science, and electoral reform.",
+    "description": "Kenneth Bunker’s columns published in Chilean media outlets including Ex-Ante, El Mercurio, and La Tercera. Focused on democracy, political science, and electoral reform.",
     "url": "https://kennethbunker.github.io/columns",
     "author": {
       "@type": "Person",
@@ -180,6 +180,15 @@ mark {
 <hr>
 <ul>
 
+<li>20251118 - El elemento Carter</li> 
+<li>20251117 - Unidad para el mandato</li> 
+<li>20251023 - Una travesía de once años</li> 
+<li>20251017 - La auditoría</li> 
+<li>20251016 - Se cierra un capítulo</li> 
+<li>20251015 - Ramo de olivos</li> 
+<li>20251009 - La paradoja del mandatario</li> 
+<li>20250926 - Prestigio Republicano</li> 
+<li>20250911 - Los pilares de justicia</li> 
 <li>20250822 - Garantías</li> 
 <li>20250821 - Castigo político</li> 
 <li>20250808 - Humos y espejos</li> 
@@ -572,6 +581,17 @@ mark {
 <hr>
 <ul>
 
+<li>20251117 - Ganar hoy, gobernar mañana</li>
+<li>20251116 - El derrumbe de la izquierda bajo el liderazgo de Boric</li>
+<li>20251107 - El peso del fracaso</li>
+<li>20251031 - Presupuesto 2026 vetado: ambición ideológica y dudas técnicas</li>
+<li>20251024 - La derecha entre el orden y la coordinación</li>
+<li>20251017 - La magnitud del error</li>
+<li>20251010 - Constituzionalización e intelectualización de la seguridad pública</li>
+<li>20251003 - La candidatura fallida de Jara</li>
+<li>20250926 - Las condiciones con las cuales Matthei gana</li>
+<li>20250905 - Nuevo clivaje</li>
+<li>20250829 - El caballo de troya</li>
 <li>20250822 - Lo que queda del gobierno: resultados y reemplazo</li>
 <li>20250808 - El dilema de la centroizquierda frente a Jara</li>
 <li>20250801 - El primer gobierno comunista en la historia de Chile</li>
