--- a/lun/index.html
+++ b/lun/index.html
@@ -138,9 +138,9 @@
 
 <div class="img-container">
 <img src="/img/lun/20251023.jpeg">
-<img src="/img/lun/blanco.jpeg">
-<img src="/img/lun/blanco.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20251116.jpeg">
+<img src="/img/lun/20251117.jpeg">
+<img src="/img/lun/20251118.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
