--- a/columns/index.html
+++ b/columns/index.html
@@ -180,6 +180,8 @@ mark {
 <hr>
 <ul>
 
+<li>20251126 - El protagonista</li> 
+<li>20251121 - Una funcionaria ejemplar</li> 
 <li>20251118 - El elemento Carter</li> 
 <li>20251117 - Unidad para el mandato</li> 
 <li>20251023 - Una travesía de once años</li> 
