--- a/theseus/media/media.html
+++ b/theseus/media/media.html
@@ -261,7 +261,7 @@
         <div class="media-item-inner">
           <!-- EDIT LOGO + LINK -->
           <a href="#" target="_blank" rel="noopener noreferrer">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/The_Guardian_2018.svg"
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/8e/Las_%C3%9Altimas_Noticias_logo.svg"
                  alt="The Guardian"
                  class="media-logo"
                  loading="lazy"
@@ -270,10 +270,10 @@
 
           <div>
             <!-- EDIT OUTLET NAME -->
-            <h5 class="mb-1">The Guardian</h5>
+            <h5 class="mb-1">Las Últimas Noticias</h5>
             <!-- EDIT QUOTE / SUMMARY -->
             <p class="mb-1">
-              “Bunker offers one of the clearest accounts yet of how Chile moved from stability to upheaval – and what that means for democracies worldwide.”
+              Interview in Las Últimas Noticias
             </p>
             <!-- EDIT LINK LABEL + URL -->
             <p class="mb-0">
