--- a/theseus/media/index.html
+++ b/theseus/media/index.html
@@ -234,7 +234,7 @@
         <div class="media-item-inner">
           <!-- EDIT LOGO + LINK -->
           <a href="#" target="_blank" rel="noopener noreferrer">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/New_Bloomberg_Logo.svg"
+            <img src="https://kennethbunker.github.io/img/bloomberg.svg"
                  alt="Bloomberg"
                  class="media-logo"
                  loading="lazy"
